--- a/manifest.json
+++ b/manifest.json
@@ -7,5 +7,8 @@
     "action": {
         "default_popup": "index.html",
         "default_title": "Coge"
+    },
+    "icons": {
+        "512": "assets/coge_logo.png"
     }
 }
